@@ -1,3 +1,8 @@
+2006-09-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkText.c (DeleteChars): backport of 8.5 text delete
+	speedup that removes tags from deleted area first. [Bug 1456342]
+
 2006-08-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinKey.c: Add WM_UNICHAR window message support (used by
